--- a/src/pages/works/auto-listings/index.mdx
+++ b/src/pages/works/auto-listings/index.mdx
@@ -4,7 +4,11 @@ export const meta = {
 	title: 'Auto Listings',
 	tag: 'WordPress',
 	description: 'Car Listings & Car Dealership Plugin for WordPress',
+	position: 'Developer',
+	tech: 'PHP, HTML5, CSS3, JS',
 	thumb: 'auto-listings/thumb.jpg',
+	demo: 'https://wpautolistings.com',
+	github: 'https://github.com/elightup/auto-listings',
 };
 
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
