--- a/src/pages/works/auto-listings/index.mdx
+++ b/src/pages/works/auto-listings/index.mdx
@@ -7,12 +7,15 @@ export const meta = {
 	position: 'Developer',
 	tech: 'PHP, HTML5, CSS3, JS',
 	thumb: 'auto-listings/thumb.jpg',
-	demo: 'https://wpautolistings.com',
+	demo: 'https://demo.wpautolistings.com/',
 	github: 'https://github.com/elightup/auto-listings',
 };
 
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
 
-Meta Box is a powerful, professional, and lightweight toolkit for developers to create custom meta boxes and custom fields for any custom post type in WordPress.
+Auto Listings helps you list, manage & sell cars easily. The plugin includes advanced search, auto-populating for vehicle data, lead capture, gallery, maps. It’s a must-have tool for car dealers.
 
-Meta Box helps you add custom fields and details on your website such as pages, posts, custom post types, forms and anywhere you want using over 40 different field types such as text, images, file upload, checkboxes, and more.
+Auto Listings works with any WordPress theme & allows you to create a car sales marketplace. It is perfect for car dealers, car sale websites or car classifieds websites.
+
+<img src="https://i.imgur.com/LFZ4XOI.png" width="1280" height="750" />
+<img src="https://i.imgur.com/AV6Hixi.png" width="1280" height="750" />
