--- a/src/pages/works/corify/index.mdx
+++ b/src/pages/works/corify/index.mdx
@@ -14,3 +14,6 @@ export const meta = {
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
 
 Corify is a must-have WordPress theme for car dealership and car listings websites. It helps you list, manage & sell cars easily with advanced search, auto-populating for vehicle data, lead capture, gallery, maps. Integrating with Elementor page builder, Corify gives you endless possibilities to customize your car listings websites.
+
+<img src="https://camo.envatousercontent.com/35505aa2582505c51b8f4f8c06e42b04d745e48a/68747470733a2f2f64656d6f322e66697477702e636f6d2f6465736372697074696f6e2f636f726966795f77705f312e706e67" width="1280" height="750" />
+<img src="https://camo.envatousercontent.com/767a9d8959c68c7e8d37447e96f6d8dc8408420a/68747470733a2f2f64656d6f322e66697477702e636f6d2f6465736372697074696f6e2f636f726966795f77705f332e706e67" width="1280" height="750" />
