--- a/src/pages/works/slim-seo/index.mdx
+++ b/src/pages/works/slim-seo/index.mdx
@@ -4,7 +4,12 @@ export const meta = {
 	title: 'Slim SEO',
 	tag: 'WordPress',
 	description: 'A Fast & Automated SEO plugin for WordPress',
+	position: 'Developer & Maintainer',
+	tech: 'PHP, JavaScript, CSS',
 	thumb: 'slim-seo/thumb.jpg',
+	github: 'https://github.com/elightup/slim-seo',
 };
+
+Slim SEO is a full-featured SEO plugin, that’s done right! It provides a complete SEO solution for WordPress where the configuration has been done automatically. Users do not need to care about their complex and semantic options.
 
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
