--- a/src/pages/works/meta-box/index.mdx
+++ b/src/pages/works/meta-box/index.mdx
@@ -4,7 +4,10 @@ export const meta = {
 	title: 'Meta Box',
 	tag: 'WordPress',
 	description: 'A WordPress Custom Fields Plugin',
+	position: 'Developer & Maintainer',
+	tech: 'PHP, JavaScript, CSS',
 	thumb: 'meta-box/thumb.jpg',
+	github: 'https://github.com/wpmetabox/meta-box',
 };
 
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
