--- a/src/pages/works/gretathemes/index.mdx
+++ b/src/pages/works/gretathemes/index.mdx
@@ -3,8 +3,14 @@ import Single from '../../../components/Single';
 export const meta = {
 	title: 'GretaThemes',
 	tag: 'WordPress',
-	description: 'Free and premium WordPress themes that are clean, simple and just work.',
+	description:
+		'Free and premium WordPress themes that are clean, simple and just work.',
+	position: 'Developer & Maintainer',
+	tech: 'PHP, JavaScript, CSS',
 	thumb: 'gretathemes/thumb.jpg',
+	demo: 'https://gretathemes.com/wordpress-themes/',
 };
 
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
+
+These themes are hand-crafted down to every detail to make sure you'll get a modern & clean design.
