--- a/src/pages/works/auto-listings/index.mdx
+++ b/src/pages/works/auto-listings/index.mdx
@@ -13,9 +13,10 @@ export const meta = {
 
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
 
-Auto Listings helps you list, manage & sell cars easily. The plugin includes advanced search, auto-populating for vehicle data, lead capture, gallery, maps. It’s a must-have tool for car dealers.
+Auto Listings helps you list, manage & sell cars easily. The plugin includes advanced search, auto-populating for vehicle data, lead capture, gallery, maps. It’s a must-have tool for car dealers. Auto Listings works with any WordPress theme & allows you to create a car sales marketplace. It is perfect for car dealers, car sale websites or car classifieds websites.
 
-Auto Listings works with any WordPress theme & allows you to create a car sales marketplace. It is perfect for car dealers, car sale websites or car classifieds websites.
+During the development, I worked a lot with customers, received the response from them and created the features to serve their needs.
+Until now, We have released 4 extensions and a premium themes of Auto Listings.
 
 <img src="https://i.imgur.com/LFZ4XOI.png" width="1280" height="750" />
 <img src="https://i.imgur.com/AV6Hixi.png" width="1280" height="750" />
