--- a/src/pages/works/gretathemes/index.mdx
+++ b/src/pages/works/gretathemes/index.mdx
@@ -14,3 +14,4 @@ export const meta = {
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
 
 These themes are hand-crafted down to every detail to make sure you'll get a modern & clean design.
+This is my first job at eLightUp, building WordPress theme. I have developed most of the themes for Gretathemes, both free and premium ones. All of them are well-optimized based on WordPress standards.
