--- a/src/pages/works/meta-box/index.mdx
+++ b/src/pages/works/meta-box/index.mdx
@@ -14,4 +14,4 @@ export default ({ children }) => <Single meta={meta}>{children}</Single>;
 
 Meta Box is a powerful, professional, and lightweight toolkit for developers to create custom meta boxes and custom fields for any custom post type in WordPress.
 
-Meta Box helps you add custom fields and details on your website such as pages, posts, custom post types, forms and anywhere you want using over 40 different field types such as text, images, file upload, checkboxes, and more.
+As a maintainer and developer, I mostly fix bugs, support our forums and develop new features for other extensions of Meta Box.
