--- a/src/pages/works/slim-seo/index.mdx
+++ b/src/pages/works/slim-seo/index.mdx
@@ -12,4 +12,6 @@ export const meta = {
 
 Slim SEO is a full-featured SEO plugin, that’s done right! It provides a complete SEO solution for WordPress where the configuration has been done automatically. Users do not need to care about their complex and semantic options.
 
+This SEO plugin is in the process of developing and perfecting. Most of the time, my tasks are fixing bugs, resolved tickets on support forum. I've also been working on a feature of premium version named Schema Builder.
+
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
