--- a/src/pages/works/react-query-demo/index.mdx
+++ b/src/pages/works/react-query-demo/index.mdx
@@ -2,20 +2,20 @@ import Single from '../../../components/Single';
 import Image from 'next/image';
 
 export const meta = {
-	title: 'Disney Clone',
+	title: 'React Query Demo',
 	tag: 'Frontend',
-	description: 'Disney Plus clone for Firebase login practice',
+	description: 'First attempt of React Query, a famous fetching data library',
 	position: 'Developer',
-	tech: 'React, TypeScript, styled-components',
-	thumb: 'disney-clone/thumb.jpg',
-	demo: 'https://disney-clone-basic.vercel.app/',
-	github: 'https://github.com/viet34tqc/disney-clone-basic',
+	tech: 'React, TypeScript, Material UI, styled-components',
+	thumb: 'react-query-demo/thumb.jpg',
+	demo: 'https://react-query-demo-alpha.vercel.app/',
+	github: 'https://github.com/viet34tqc/react-query-demo',
 };
 
 export default ({ children }) => <Single meta={meta}>{children}</Single>;
 
-In this demo, I decided to use styled-component for styling instead of Sass as usual. I also try another way for authentication and Firebase is really a good choice.
+Have heard about React Query for a while, so I built this demo to explore how React Query fetchs, caches and updates data. It has a lot of features, but in this demo, I only trie `useQuery, `useMutation` and data pagination. React Query is really worth using in practical projects.
 
-<img src="https://i.imgur.com/2w4CEGW.png" width="1280" height="750" />
+<img src="https://i.imgur.com/1a5FntE.png" width="1280" height="750" />
 
-<img src="https://i.imgur.com/HLlHQD3.png" width="1280" height="750" />
+<img src="https://i.imgur.com/hjofSVX.png" width="1280" height="750" />
