Added alt to demo image

--- a/app/works/contents/auto-listings.mdx
+++ b/app/works/contents/auto-listings.mdx
@@ -14,5 +14,5 @@ Auto Listings helps you list, manage & sell cars easily. The plugin includes adv
 During the development, I worked a lot with customers, received the response from them and created the features to serve their needs.
 Until now, We have released 4 extensions and a premium themes of Auto Listings.
 
-<img src="https://i.imgur.com/LFZ4XOI.png" width="1280" height="750" />
-<img src="https://i.imgur.com/AV6Hixi.png" width="1280" height="750" />
+<Image src="https://i.imgur.com/LFZ4XOI.png" width="1280" height="750" alt="Demo image for Auto Listing project" />
+<Image src="https://i.imgur.com/AV6Hixi.png" width="1280" height="750" alt="Demo image for Auto Listing project" />
