--- a/app/works/contents/corify.mdx
+++ b/app/works/contents/corify.mdx
@@ -17,9 +17,11 @@ My task is converting this premium theme from PSD design and making it work perf
   src="https://camo.envatousercontent.com/35505aa2582505c51b8f4f8c06e42b04d745e48a/68747470733a2f2f64656d6f322e66697477702e636f6d2f6465736372697074696f6e2f636f726966795f77705f312e706e67"
   width="1280"
   height="750"
+  alt="Demo image for Corify project"
 />
 <Image
   src="https://camo.envatousercontent.com/767a9d8959c68c7e8d37447e96f6d8dc8408420a/68747470733a2f2f64656d6f322e66697477702e636f6d2f6465736372697074696f6e2f636f726966795f77705f332e706e67"
   width="1280"
   height="750"
+  alt="Demo image for Corify project"
 />
