--- a/app/works/contents/dj-events.mdx
+++ b/app/works/contents/dj-events.mdx
@@ -11,6 +11,6 @@ github: 'https://github.com/viet34tqc/nextjs-dj-events'
 
 This is another demo using NextJS as frontend and Strapi as backend. User can register an account to create and manage their events from dashboard.
 
-<Image src="https://i.imgur.com/fdsXgBE.png" width="1280" height="750" />
+<Image src="https://i.imgur.com/fdsXgBE.png" width="1280" height="750" alt="Demo image for DJ Events project" />
 
-<Image src="https://i.imgur.com/fr460PT.png" width="1280" height="750" />
+<Image src="https://i.imgur.com/fr460PT.png" width="1280" height="750" alt="Demo image for DJ Events project" />
