--- a/app/works/contents/nodejs-jwt-react.mdx
+++ b/app/works/contents/nodejs-jwt-react.mdx
@@ -16,8 +16,8 @@ Here are the features:
 - User can create, update, delete post and comments for each post
 - Admin user can delete comment while Subscriber user cannot
 
-<Image src="https://i.imgur.com/5TjOdpn.png" width="1280" height="750" />
+<Image src="https://i.imgur.com/5TjOdpn.png" width="1280" height="750" alt="Demo image for NodeJS JWT React project" />
 
-<Image src="https://i.imgur.com/oL6XTMq.png" width="1280" height="750" />
+<Image src="https://i.imgur.com/oL6XTMq.png" width="1280" height="750" alt="Demo image for NodeJS JWT React project" />
 
-<Image src="https://i.imgur.com/yoh7Kkm.png" width="1280" height="750" />
+<Image src="https://i.imgur.com/yoh7Kkm.png" width="1280" height="750" alt="Demo image for NodeJS JWT React project" />
