--- a/app/works/contents/dj-events.mdx
+++ b/app/works/contents/dj-events.mdx
@@ -7,10 +7,21 @@ tech: 'NextJS, TypeScript, Strapi'
 thumb: 'dj-events/thumb.jpg'
 demo: 'https://nextjs-dj-events.vercel.app/'
 github: 'https://github.com/viet34tqc/nextjs-dj-events'
+order: 4
 ---
 
 This is another demo using NextJS as frontend and Strapi as backend. User can register an account to create and manage their events from dashboard.
 
-<Image src="https://i.imgur.com/fdsXgBE.png" width="1280" height="750" alt="Demo image for DJ Events project" />
+<Image
+  src="https://i.imgur.com/fdsXgBE.png"
+  width="1280"
+  height="750"
+  alt="Demo image for DJ Events project"
+/>
 
-<Image src="https://i.imgur.com/fr460PT.png" width="1280" height="750" alt="Demo image for DJ Events project" />
+<Image
+  src="https://i.imgur.com/fr460PT.png"
+  width="1280"
+  height="750"
+  alt="Demo image for DJ Events project"
+/>
