--- a/app/works/contents/vanilla-js.mdx
+++ b/app/works/contents/vanilla-js.mdx
@@ -7,10 +7,21 @@ tech: 'JavaScript, HTML, CSS'
 thumb: 'vanilla-js/thumb.jpg'
 demo: 'https://demo.vietnguyenwp.com/vanilla-js/'
 github: 'https://github.com/viet34tqc/small-projects-vanilla-js'
+order: 2
 ---
 
 These projects are kind of frontend excersises to sharpen my skills. If you have a chance to look at it on github, you will see that every small project has a readme file that describes what it do. Feel free to check them out.
 
-<Image src="https://i.imgur.com/uRY3ehZ.png" width="1280" height="750" alt="Demo image for Vanilla JS project" />
+<Image
+  src="https://i.imgur.com/uRY3ehZ.png"
+  width="1280"
+  height="750"
+  alt="Demo image for Vanilla JS project"
+/>
 
-<Image src="https://i.imgur.com/nAKVwNT.png" width="1280" height="750" alt="Demo image for Vanilla JS project" />
+<Image
+  src="https://i.imgur.com/nAKVwNT.png"
+  width="1280"
+  height="750"
+  alt="Demo image for Vanilla JS project"
+/>
